Ventana productos esqueleto

--- a/PuntoDeVenta/Main.resx
+++ b/PuntoDeVenta/Main.resx
@@ -223,8 +223,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAuDoAAAJNU0Z0AUkBTAMBAQAB
-        uAEAAbgBAAFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAArjoAAAJNU0Z0AUkBTAMBAQAB
+        EAEBARABAQFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
         AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
         AP8A/wD/AP8AZQADCAEKAVEBbwFRAfcBPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
@@ -366,7 +366,7 @@
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
         PAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
-        OAH/ATwBjgE4Af8BPAGOATgB/wFgAW8BXwHz/wD/AP8AOwACPAE7AWUBPAGOATgB/wE8AY4BOAH/ATwB
+        OAH/ATwBjgE4Af8BPAGOATgB/wFgAW8BYAHz/wD/AP8AOwACPAE7AWUBPAGOATgB/wE8AY4BOAH/ATwB
         jgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB
         /wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwB
         jgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB
@@ -411,7 +411,7 @@
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH//wD/AP8AIwAB
-        UAGDAUwB+QFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
+        UAFxAUwB+QFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
@@ -458,27 +458,33 @@
         GwH/ASABXgEbAf8BKwFeASsB/P8A/wD/AMcAAzMBUgEyAX0BLgH/ATIBfQEuAf8BMgF9AS4B/wEyAX0B
         LgH/ATIBfQEuAf8BJwFqASMB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8B
         IAFeARsB/wErAV4BKwH8/wD/AP8AzwADMwFSATIBfQEuAf8BMgF9AS4B/wEyAX0BLgH/AScBagEjAf8B
-        IAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8BOgFNATIB+v8A/wD/
-        ANcAAzMBUgEyAX0BLgH/ATIBfQEuAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4B
-        GwH/ASABXgEbAf8BOgFNATIB+v8A/wD/AN8AAzMBUgEtAXMBKAH/ASABXgEbAf8BIAFeARsB/wEgAV4B
-        GwH/ASABXgEbAf8BIAFeARsB/wE6AU0BMgH6/wD/AP8A5wADMwFSASABXgEbAf8BIAFeARsB/wEgAV4B
-        GwH/ASABXgEbAf8BNwF1ATIB/v8A/wD/AO8AA0QBegEgAV4BGwH/ASABXgEbAf8BQAFKAUAB/f8A/wD/
-        AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8AlwAB
-        QgFNAT4HAAE+AwABKAQAAQECAAFAAwABAQEAAQEGAAEIFgAD/wEACP8YAAj/GAAI/xgACP8YAAj/GAAI
-        /xgACP8YAAj/GAAI/xgAAf8B8AQAAQ8B/xgAAf8B8AQAAQcB/xgAAf8B4AQAAQcB/xgAAf8B4AQAAQcB
-        /xgAAf8B4AQAAQcB/xgAAf8B4AQAAQMB/xgAAf8B4AQAAQMB/xgAAf8BwAQAAQMB/xgAAf8BwAQAAQMB
-        /xgAAf8BwAQAAQMB/xgAAf8BwAQAAQEB/xgAAf8BwAQAAQEB/xgAAf8BgAQAAQEB/xgAAf8BgAQAAQEB
-        /xgAAf8BgAQAAQEB/xgAAf8BgAUAAf8YAAH/AYAFAAH/GAAB/wYAAf8YAAH/BgAB/xgAAf8GAAH/GAAB
-        /wYAAX8YAAH/BgABfxgAAf4GAAF/GAAB/gYAAX8YAAH4BgABDxgAAfAGAAEPGAAB8AYAAQ8YAAHwBgAB
-        DxgAAfAGAAEPGAAB8AYAAQ8YAAHwBgABDxgAAfgGAAEPGAAB/wH+AQAC/wGAAX8B/xgAAv8BAAF/Af8B
-        AAL/GAAC/wGAAT8B/gEBAv8YAAL/AcABHwH8AQMC/xgAAv8B4AEPAfgBBwL/GAAC/wHwAQcB8AEPAv8Y
-        AAL/AfgBAwHgAR8C/xgAAv8B/AEBAcABPwL/GAAC/wH+AQABgAF/Av8YAAP/AgAD/xgAA/8BgAEBA/8Y
-        AAP/AcABAwP/GAAD/wHgAQcD/xgAA/8B8AEPA/8YAAP/AfgBHwP/GAAD/wH8AT8D/xgACP8YAAj/GAAI
-        /xgACP8YAAj/GAAI/xgACP8YAAs=
+        IAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8CTQFGAfr/AP8A/wDX
+        AAMzAVIBMgF9AS4B/wEyAX0BLgH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB
+        /wEgAV4BGwH/Ak0BRgH6/wD/AP8A3wADMwFSAS0BcwEoAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8B
+        IAFeARsB/wEgAV4BGwH/Ak0BRgH6/wD/AP8A5wADMwFSASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASAB
+        XgEbAf8BQgGAAT0B/v8A/wD/AO8AA0QBegEgAV4BGwH/ASABXgEbAf8DQAH9/wD/AP8A/wD/AP8A/wD/
+        AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wCXAAFCAU0BPgcAAT4D
+        AAEoBAABAQIAAUADAAEBAQABAQYAAQgWAAP/AQAI/xgACP8YAAj/GAAI/xgACP8YAAj/GAAI/xgACP8Y
+        AAj/GAAB/wHwBAABDwH/GAAB/wHwBAABBwH/GAAB/wHgBAABBwH/GAAB/wHgBAABBwH/GAAB/wHgBAAB
+        BwH/GAAB/wHgBAABAwH/GAAB/wHgBAABAwH/GAAB/wHABAABAwH/GAAB/wHABAABAwH/GAAB/wHABAAB
+        AwH/GAAB/wHABAABAQH/GAAB/wHABAABAQH/GAAB/wGABAABAQH/GAAB/wGABAABAQH/GAAB/wGABAAB
+        AQH/GAAB/wGABQAB/xgAAf8BgAUAAf8YAAH/BgAB/xgAAf8GAAH/GAAB/wYAAf8YAAH/BgABfxgAAf8G
+        AAF/GAAB/gYAAX8YAAH+BgABfxgAAfgGAAEPGAAB8AYAAQ8YAAHwBgABDxgAAfAGAAEPGAAB8AYAAQ8Y
+        AAHwBgABDxgAAfAGAAEPGAAB+AYAAQ8YAAH/Af4BAAL/AYABfwH/GAAC/wEAAX8B/wEAAv8YAAL/AYAB
+        PwH+AQEC/xgAAv8BwAEfAfwBAwL/GAAC/wHgAQ8B+AEHAv8YAAL/AfABBwHwAQ8C/xgAAv8B+AEDAeAB
+        HwL/GAAC/wH8AQEBwAE/Av8YAAL/Af4BAAGAAX8C/xgAA/8CAAP/GAAD/wGAAQED/xgAA/8BwAEDA/8Y
+        AAP/AeABBwP/GAAD/wHwAQ8D/xgAA/8B+AEfA/8YAAP/AfwBPwP/GAAI/xgACP8YAAj/GAAI/xgACP8Y
+        AAj/GAAI/xgACw==
 </value>
   </data>
+  <metadata name="panelFooter.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>122, 17</value>
+  </metadata>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>284, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>48</value>
