Cambios modelo, se agrega turnos, Ticket, ProductoMovimiento, PermisoUsuario

--- a/PuntoDeVenta/Main.resx
+++ b/PuntoDeVenta/Main.resx
@@ -223,8 +223,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAArjoAAAJNU0Z0AUkBTAMBAQAB
-        EAEBARABAQFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAqDoAAAJNU0Z0AUkBTAMBAQAB
+        QAEBAUABAQFAAQABQAEABP8BIQEACP8BQgFNATYHAAE2AwABKAQAAQECAAFAAwABAQEAASAHAAEB/wD/
         AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/
         AP8A/wD/AP8AZQADCAEKAVEBbwFRAfcBPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4B
         OAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8BPAGOATgB/wE8AY4BOAH/ATwBjgE4Af8B
@@ -411,7 +411,7 @@
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH//wD/AP8AIwAB
-        UAFxAUwB+QFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
+        UAFqAUwB+QFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
         UAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8B
         TAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8BUAGvAUwB/wFQAa8BTAH/AVABrwFMAf8B
@@ -458,23 +458,23 @@
         GwH/ASABXgEbAf8BKwFeASsB/P8A/wD/AMcAAzMBUgEyAX0BLgH/ATIBfQEuAf8BMgF9AS4B/wEyAX0B
         LgH/ATIBfQEuAf8BJwFqASMB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8B
         IAFeARsB/wErAV4BKwH8/wD/AP8AzwADMwFSATIBfQEuAf8BMgF9AS4B/wEyAX0BLgH/AScBagEjAf8B
-        IAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8CTQFGAfr/AP8A/wDX
-        AAMzAVIBMgF9AS4B/wEyAX0BLgH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB
-        /wEgAV4BGwH/Ak0BRgH6/wD/AP8A3wADMwFSAS0BcwEoAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8B
-        IAFeARsB/wEgAV4BGwH/Ak0BRgH6/wD/AP8A5wADMwFSASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASAB
-        XgEbAf8BQgGAAT0B/v8A/wD/AO8AA0QBegEgAV4BGwH/ASABXgEbAf8DQAH9/wD/AP8A/wD/AP8A/wD/
-        AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wCXAAFCAU0BPgcAAT4D
-        AAEoBAABAQIAAUADAAEBAQABAQYAAQgWAAP/AQAI/xgACP8YAAj/GAAI/xgACP8YAAj/GAAI/xgACP8Y
-        AAj/GAAB/wHwBAABDwH/GAAB/wHwBAABBwH/GAAB/wHgBAABBwH/GAAB/wHgBAABBwH/GAAB/wHgBAAB
-        BwH/GAAB/wHgBAABAwH/GAAB/wHgBAABAwH/GAAB/wHABAABAwH/GAAB/wHABAABAwH/GAAB/wHABAAB
-        AwH/GAAB/wHABAABAQH/GAAB/wHABAABAQH/GAAB/wGABAABAQH/GAAB/wGABAABAQH/GAAB/wGABAAB
-        AQH/GAAB/wGABQAB/xgAAf8BgAUAAf8YAAH/BgAB/xgAAf8GAAH/GAAB/wYAAf8YAAH/BgABfxgAAf8G
-        AAF/GAAB/gYAAX8YAAH+BgABfxgAAfgGAAEPGAAB8AYAAQ8YAAHwBgABDxgAAfAGAAEPGAAB8AYAAQ8Y
-        AAHwBgABDxgAAfAGAAEPGAAB+AYAAQ8YAAH/Af4BAAL/AYABfwH/GAAC/wEAAX8B/wEAAv8YAAL/AYAB
-        PwH+AQEC/xgAAv8BwAEfAfwBAwL/GAAC/wHgAQ8B+AEHAv8YAAL/AfABBwHwAQ8C/xgAAv8B+AEDAeAB
-        HwL/GAAC/wH8AQEBwAE/Av8YAAL/Af4BAAGAAX8C/xgAA/8CAAP/GAAD/wGAAQED/xgAA/8BwAEDA/8Y
-        AAP/AeABBwP/GAAD/wHwAQ8D/xgAA/8B+AEfA/8YAAP/AfwBPwP/GAAI/xgACP8YAAj/GAAI/xgACP8Y
-        AAj/GAAI/xgACw==
+        IAFeARsB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8DTQH6/wD/AP8A1wAD
+        MwFSATIBfQEuAf8BMgF9AS4B/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8B
+        IAFeARsB/wNNAfr/AP8A/wDfAAMzAVIBLQFzASgB/wEgAV4BGwH/ASABXgEbAf8BIAFeARsB/wEgAV4B
+        GwH/ASABXgEbAf8DTQH6/wD/AP8A5wADMwFSASABXgEbAf8BIAFeARsB/wEgAV4BGwH/ASABXgEbAf8B
+        SAGAAUMB/v8A/wD/AO8AA0QBegEgAV4BGwH/ASABXgEbAf8DQAH9/wD/AP8A/wD/AP8A/wD/AP8A/wD/
+        AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wD/AP8A/wCXAAFCAU0BPgcAAT4DAAEoBAAB
+        AQIAAUADAAEBAQABAQYAAQgWAAP/AQAI/xgACP8YAAj/GAAI/xgACP8YAAj/GAAI/xgACP8YAAj/GAAB
+        /wHwBAABDwH/GAAB/wHwBAABBwH/GAAB/wHgBAABBwH/GAAB/wHgBAABBwH/GAAB/wHgBAABBwH/GAAB
+        /wHgBAABAwH/GAAB/wHgBAABAwH/GAAB/wHABAABAwH/GAAB/wHABAABAwH/GAAB/wHABAABAwH/GAAB
+        /wHABAABAQH/GAAB/wHABAABAQH/GAAB/wGABAABAQH/GAAB/wGABAABAQH/GAAB/wGABAABAQH/GAAB
+        /wGABQAB/xgAAf8BgAUAAf8YAAH/BgAB/xgAAf8GAAH/GAAB/wYAAf8YAAH/BgABfxgAAf8GAAF/GAAB
+        /gYAAX8YAAH+BgABfxgAAfgGAAEPGAAB8AYAAQ8YAAHwBgABDxgAAfAGAAEPGAAB8AYAAQ8YAAHwBgAB
+        DxgAAfAGAAEPGAAB+AYAAQ8YAAH/Af4BAAL/AYABfwH/GAAC/wEAAX8B/wEAAv8YAAL/AYABPwH+AQEC
+        /xgAAv8BwAEfAfwBAwL/GAAC/wHgAQ8B+AEHAv8YAAL/AfABBwHwAQ8C/xgAAv8B+AEDAeABHwL/GAAC
+        /wH8AQEBwAE/Av8YAAL/Af4BAAGAAX8C/xgAA/8CAAP/GAAD/wGAAQED/xgAA/8BwAEDA/8YAAP/AeAB
+        BwP/GAAD/wHwAQ8D/xgAA/8B+AEfA/8YAAP/AfwBPwP/GAAI/xgACP8YAAj/GAAI/xgACP8YAAj/GAAI
+        /xgACw==
 </value>
   </data>
   <metadata name="panelFooter.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
