--- a/PuntoDeVenta/UserControls/ProductosControls/NuevoProducto.resx
+++ b/PuntoDeVenta/UserControls/ProductosControls/NuevoProducto.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnGuardarProducto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABzSURBVEhL7c9BCoAgEIXhOVF3sCHtlOr9okUEtawEH7iQ
+        No7gYj4IUph/ipQazxzXKb/KS3GO7klPvpJTxsX/QuNVY8YxlI9VTV/+Dd1/S5riwN5etSUiceDgznKJ
+        aByMXw5ExeNgotu7xYGD3brFFRHRC50Ee/RPyHbLAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
