--- a/PuntoDeVenta/UserControls/CommonControls/EtiquetaControl.resx
+++ b/PuntoDeVenta/UserControls/CommonControls/EtiquetaControl.resx
@@ -118,83 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="btnCatalogo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAceptar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAANZJREFUSEvdkrEJwmAYRLOKY1i7o+ACriBob+kCgkuIhVoohCsex2uSgIUHrwjc
-        PcjHP/xfjrf3eSlReU6392cpUXlsMJWoPCxu9o+R/ja4i8rD4mp7H+lvg7uoPCzuLs+R/ja4i8rD4lyi
-        8rDYv8+TNNxF5WGxxxQ23EXlYbHvy5s33EXlYXEuUXlY7DfOd99wF5WHxb4vb95wF5WHxblE5bHBVKLy
-        sNj35c0b7qLysNj35c0b7qLysNhvnO++4S4qD4tzicpjg6lE5TlcX+ulRPWLDMMXs6yo5DOnd2QAAAAA
-        SUVORK5CYII=
-</value>
-  </data>
-  <data name="btnNuevoProducto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAQxJREFUSEvdlEEOwUAYhbsUJ2DBVexI2pGpBZYuQXoA7mEvtElv4BDEJdhYC60+
-        +rd9rWEjfMm3+t//msxMav0/neWkpnx9VIF7Lar3iH0GL+VixQzluzNW8tJw2EZFOf2N9uiyob3NoIkq
-        Dlt6V1QVYWHp4XR4yuZSVKaoUNVZUCphcylqU6InV/IUUyVsLnUCPUd1AgvllbB5zguqE0jgftYmTLde
-        YTcW1Qks8PsfyCthc2l0yWdUJ8Q/LhaUStg841qPUZ1Cg0IJm0tRmYUFpfFZP2Tzh47v7lBZhC28K6o4
-        3UC32JKpqKnGXtkNtvxKrJvDSpiVZ25C9KYXUdElW6rPtu+OEPkWlnUD2fB96U/v9RMAAAAASUVORK5C
-        YII=
-</value>
-  </data>
-  <data name="btnModificarProducto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAALFJREFUSEvtjcENgkAURPdi6IMabMGjDXAmFkAhnm3AOtRCONEHazBvjZD55u8q
-        J33JHFj+vAl/VieeQpzC53dJ8lVGlvIUfn+GEr+GszKUUIXzPJTIChU/SmKFih8lsULFj5JYoeJHSaxQ
-        8aMkVqj4URIrVPzEWyVFKlTyeAw4RjjP5znwZoTTfMbLpp8NiBFOy9g17Vy+GOGsnGlAjlyrAyflnI/b
-        Og103X7g+ecJ4Q5F9Kl66Cfq+QAAAABJRU5ErkJggg==
-</value>
-  </data>
-  <data name="btnEliminarProducto.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAMpJREFUSEvtkjEKAjEURNN4IBG0EjyLhXbeW2RZ6xSJRCfL7OfrH8VKfPCKqG+C
-        q+nP16jbVK14633qaVc/FROv8UJVTMR4jyQSqYY3EIlUwxuIRKrhDUQi1bBxOW5m5zycZ+cmUg0Oc853
-        y2H9OI+X6TX+HFINDst+OQ3m6+CON5Fq2Hh2iTPeRKph4/bM+QL7mzSRanDI4/xN7CVINTjsg/3Ml/Dn
-        kGpw6Nn/USxSDRsrItXwBiKRangDkUg16iotvJFnIvs5UroBTSNYihbWp18AAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnCategorias.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAANZJREFUSEvtkj0KwkAQhQNeyBtYaGHrtWwSr+BuJWxSWQiCJ/CnsLCw9RQpRmd9
-        q2LGZFc2CMEPHiSPmTcMO8mfr9ifzoTPJ+sj1cqXTOfESnV+sMaCemLgu3xxA1jWkMIk+XIL3t03KPqw
-        /IaE0OobMOKAmPxkwGCypBChrUqmTIkr2sIKDmehtQrCH2cqNfvIhklk2mw4fDY3Y1hxN2BafQOmm2c6
-        mhLVCWXNuAtKlbnAagxnobQZN4DF/1KYJNvsQ6rNyg5QxRBW3A0+IYW+CmWdI0mufVnoKkPJjCwAAAAA
-        SUVORK5CYII=
-</value>
-  </data>
-  <data name="btnImportar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAGdJREFUSEtjGGZgWsd/qmCcAJticvAIBzQNApqGM7LhYNz2FCpDBTCl7R+mBUA8
-        vTMaqoICMK1jA4bByHjVKmaoSjLApG5FrIaiY6oAmhiKDEYtGHhAcx/Q3AKaA5r7gOYWDE7AwAAA7vjW
-        9RkzK+QAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnVentasPeriodo.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAMtJREFUSEvtkjEKwkAURPcgEU9hDmDu5LnsAgoWQlotI+gxtF5ZmcCfyeqG3RQi
-        PnjFl8mLRdxvsz10PogzypQN8WhWu3tT++Dw8HDHHG3W9QapMfbBYNYLIJKMHeyXi+QLPm2QZHTUVtVL
-        /d36boMko6MSkWT6tvVziSRzvtz8XCLJxIa5IsnoaPhCglNuK5KMjjSQuq1IMjrSQOq2IsnoqEQkGR3p
-        P9Tbfvf2uSCSjI40qPf3v6BEJJnYMFckmdgwx1N/PSL5J4VzT83/OZRX9i/eAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnPromociones.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wgAADsIBFShKgAAAAZFJREFUSEvNlD9PwkAYh0scNH4AZ010dAJaiSZYDhITFSciyKi7iYMfxri4uDrp
-        4ocwcTKuxn8jvRaiSM++53t4vbuWIgw+yS+8PX7v04Q2WP8OSoonOE4fr2K/+MRmnaqzgkeTATLPtQOY
-        KSmcw7UIs6wc28nPi2u+MA5+xT6VhaOCa9kxSdISPZsDXE2HVpxjkyBrop+yiiod0wJk8PzE+rc3xu+S
-        gso41LV9tQh0D5ts8PjAZ/lc7smBh49KHa0sicTcPWoNZ1NQpeOT4qVaFqJgf3s4i8+ksHJ5DpW/+G7h
-        3VQO2ntcCMA163+yj4szraemS4olVI/35ogbZQnqf+jV7CVTSY6Qh2+vfAaCVl3rQVAbJzrNmcqQ/vUV
-        C33KZ0Ccy7MI6nRorbSglkVkUdIsgjodtSgnaO4OZ0444B9f93exHiRwnToq46jFSYJKM9EfV9u0lBaP
-        2CG8KKgYjUmSll7ZWcTVbHib+XWTKCm4Nh6wGG4tz8LMGo0Zk9CrOht/voEKJWurU5NNB8v6BqvhGzbu
-        ecLQAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAABzSURBVEhL7c9BCoAgEIXhOVF3sCHtlOr9okUEtawEH7iQ
+        No7gYj4IUph/ipQazxzXKb/KS3GO7klPvpJTxsX/QuNVY8YxlI9VTV/+Dd1/S5riwN5etSUiceDgznKJ
+        aByMXw5ExeNgotu7xYGD3brFFRHRC50Ee/RPyHbLAAAAAElFTkSuQmCC
 </value>
   </data>
 </root>
