--- a/PuntoDeVenta/UserControls/Inventario.resx
+++ b/PuntoDeVenta/UserControls/Inventario.resx
@@ -120,54 +120,52 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="btnAgregar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEMSURBVEhL3ZRBDsFAGIW7FCdgwVXsSNqRqQWWLkF6AO5h
-        L7RJb+AQxCXYWAutPvq3fa1hI3zJt/rf/5rMTGr9P53lpKZ8fVSBey2q94h9Bi/lYsUM5bszVvLScNhG
-        RTn9jfbosqG9zaCJKg5beldUFWFh6eF0eMrmUlSmqFDVWVAqYXMpalOiJ1fyFFMlbC51Aj1HdQIL5ZWw
-        ec4LqhNI4H7WJky3XmE3FtUJLPD7H8grYXNpdMlnVCfEPy4WlErYPONaj1GdQoNCCZtLUZmFBaXxWT9k
-        84eO7+5QWYQtvCuqON1At9iSqaipxl7ZDbb8Sqybw0qYlWduQvSmF1HRJVuqz7bvjhD5FpZ1A9nwfelP
-        7/UTAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAQxJREFUSEvdlEEOwUAYhbsUJ2DBVexI2pGpBZYuQXoA7mEvtElv4BDEJdhYC60+
+        +rd9rWEjfMm3+t//msxMav0/neWkpnx9VIF7Lar3iH0GL+VixQzluzNW8tJw2EZFOf2N9uiyob3NoIkq
+        Dlt6V1QVYWHp4XR4yuZSVKaoUNVZUCphcylqU6InV/IUUyVsLnUCPUd1AgvllbB5zguqE0jgftYmTLde
+        YTcW1Qks8PsfyCthc2l0yWdUJ8Q/LhaUStg841qPUZ1Cg0IJm0tRmYUFpfFZP2Tzh47v7lBZhC28K6o4
+        3UC32JKpqKnGXtkNtvxKrJvDSpiVZ25C9KYXUdElW6rPtu+OEPkWlnUD2fB96U/v9RMAAAAASUVORK5C
+        YII=
 </value>
   </data>
   <data name="btnAjustes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAACxSURBVEhL7Y3BDYJAFET3YuiDGmzBow1wJhZAIZ5twDrU
-        QjjRB2swb42Q+ebvKid9yRxY/rwJf1YnnkKcwud3SfJVRpbyFH5/hhK/hrMylFCF8zyUyAoVP0pihYof
-        JbFCxY+SWKHiR0msUPGjJFao+FESK1T8xFslRSpU8ngMOEY4z+c58GaE03zGy6afDYgRTsvYNe1cvhjh
-        rJxpQI5cqwMn5ZyP2zoNdN1+4PnnCeEORfSpeugn6vkAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAALFJREFUSEvtjcENgkAURPdi6IMabMGjDXAmFkAhnm3AOtRCONEHazBvjZD55u8q
+        J33JHFj+vAl/VieeQpzC53dJ8lVGlvIUfn+GEr+GszKUUIXzPJTIChU/SmKFih8lsULFj5JYoeJHSaxQ
+        8aMkVqj4URIrVPzEWyVFKlTyeAw4RjjP5znwZoTTfMbLpp8NiBFOy9g17Vy+GOGsnGlAjlyrAyflnI/b
+        Og103X7g+ecJ4Q5F9Kl66Cfq+QAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnProductosBajos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEFSURBVEhL3ZK/DgFBEIfvpU6hPKISic5bUPICIigueCUN
-        j6BWqFl/GsvxG/bm5sZmqXzJV7jMfJvbE/0ny9XOhoqEjrToKxI60qKvSOjQ8GC49jbogBCR0JEWfUVC
-        R1r0FQkdGnbvlt85l+aQ0KHhEJHQkRZ9RUKHht1X51fCpTkkdGg4RCR0pMVPbrs9u29U7aEe95Eph5bc
-        V+dXQh5qlRLjFLkiFP2kG7zMxtaejtZ0mq9nJonbSOaRYpIUcqFnJJJ5pBg3u/MscJlPkX7HTSv5/oDH
-        B70HrsYU4u5vJPNIQe5msngG3TtHPEM9wBeK8Pg5Hf3qgDh1D+Fi7Duyv2J5PIpuLtkm+HPsvAEAAAAA
-        SUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAQVJREFUSEvdkr8OAUEQh++lTqE8ohKJzltQ8gIiKC54JQ2PoFaoWX8ay/Eb9ubm
+        xmapfMlXuMx8m9sT/SfL1c6GioSOtOgrEjrSoq9I6NDwYLj2NuiAEJHQkRZ9RUJHWvQVCR0adu+W3zmX
+        5pDQoeEQkdCRFn1FQoeG3VfnV8KlOSR0aDhEJHSkxU9uuz27b1TtoR73kSmHltxX51dCHmqVEuMUuSIU
+        /aQbvMzG1p6O1nSar2cmidtI5pFikhRyoWckknmkGDe78yxwmU+RfsdNK/n+gMcHvQeuxhTi7m8k80hB
+        7mayeAbdO0c8Qz3AF4rw+Dkd/eqAOHUP4WLsO7K/Ynk8im4u2Sb4c+y8AQAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnReporteInventario.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAADWSURBVEhL3ZKxCcJgGESzimNYu6PgAq4gaG/pAoJLiIVa
-        KIQrHsdrkoCFB68I3D3Ixz/8X46393kpUXlOt/dnKVF5bDCVqDwsbvaPkf42uIvKw+Jqex/pb4O7qDws
-        7i7Pkf42uIvKw+JcovKw2L/PkzTcReVhsccUNtxF5WGx78ubN9xF5WFxLlF5WOw3znffcBeVh8W+L2/e
-        cBeVh8W5ROWxwVSi8rDY9+XNG+6i8rDY9+XNG+6i8rDYb5zvvuEuKg+Lc4nKY4OpROU5XF/rpUT1iwzD
-        F7OsqOQzp3dkAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAANZJREFUSEvdkrEJwmAYRLOKY1i7o+ACriBob+kCgkuIhVoohCsex2uSgIUHrwjc
+        PcjHP/xfjrf3eSlReU6392cpUXlsMJWoPCxu9o+R/ja4i8rD4mp7H+lvg7uoPCzuLs+R/ja4i8rD4lyi
+        8rDYv8+TNNxF5WGxxxQ23EXlYbHvy5s33EXlYXEuUXlY7DfOd99wF5WHxb4vb95wF5WHxblE5bHBVKLy
+        sNj35c0b7qLysNj35c0b7qLysNhvnO++4S4qD4tzicpjg6lE5TlcX+ulRPWLDMMXs6yo5DOnd2QAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="btnReporteMovimientos.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAEJSURBVEhLYyAF9K48xjlhydovUC51weTl69QmLFn3v3/x
-        egcQDRUmDziGpyq7RqUcA+HOuStugnD/ojXf+hau9gfJ9y5c87l7/oqHMDmI2uRDYM2EgHt0kjpQw38Y
-        BrmWEEZWDzUGNwAqArn8PwxgMxAdwwBIn0t0igXUKOwA3YLvP3/+f/b6LU6MDED6nCOTLKFGYQfoFpAC
-        Ri0gCMiy4PyNO2AMArcePsGKYYBiC758+44VwwBZFpACBqcF1nu+gTExgCwLmFd+AWNkNjqGAbIsOP7m
-        DxgTA8iygBQwQixwiUreS4kFblEpxlCjsIPQ0FBmkEJyMdQYwgDkVVIw0HADqFZ6AgYGAEJVTAeC8ZiM
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wgAADsIBFShKgAAAAQlJREFUSEtjIAX0rjzGOWHJ2i9QLnXB5OXr1CYsWfe/f/F6BxANFSYPOIanKrtG
+        pRwD4c65K26CcP+iNd/6Fq72B8n3LlzzuXv+iocwOYja5ENgzYSAe3SSOlDDfxgGuZYQRlYPNQY3ACoC
+        ufw/DGAzEB3DAEifS3SKBdQo7ADdgu8/f/5/9votTowMQPqcI5MsoUZhB+gWkAJGLSAIyLLg/I07YAwC
+        tx4+wYphgGILvnz7jhXDAFkWkAIGpwXWe76BMTGALAuYV34BY2Q2OoYBsiw4/uYPGBMDyLKAFDBCLHCJ
+        St5LiQVuUSnGUKOwg9DQUGaQQnIx1BjCAORVUjDQcAOoVnoCBgYAQlVMB4LxmIwAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
